// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: closed 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom"
  onClick={[Function]}
  open={false}
  title={
    <h3>
      Azure Project
    </h3>
  }
/>
`;

exports[`should render correctly: importing 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom open"
  onClick={[Function]}
  open={true}
  title={
    <h3>
      Azure Project
    </h3>
  }
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="display-flex-wrap"
    >
      <div
        className="display-flex-start spacer-right spacer-bottom create-project-azdo-repo"
        key="Azure repo 1"
      >
        <Radio
          checked={false}
          className="overflow-hidden"
          disabled={true}
          onCheck={[Function]}
          value="Azure repo 1"
        >
          <strong
            className="text-ellipsis"
            title="Azure repo 1"
          >
            Azure repo 1
          </strong>
        </Radio>
      </div>
    </div>
    <ListFooter
      count={1}
      loadMore={[Function]}
      total={1}
    />
  </DeferredSpinner>
</BoxedGroupAccordion>
`;

exports[`should render correctly: loading 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom open"
  onClick={[Function]}
  open={true}
  title={
    <h3>
      Azure Project
    </h3>
  }
>
  <DeferredSpinner
    loading={true}
  >
    <div
      className="display-flex-wrap"
    />
    <ListFooter
      count={0}
      loadMore={[Function]}
      total={0}
    />
  </DeferredSpinner>
</BoxedGroupAccordion>
`;

exports[`should render correctly: with repositories 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom open"
  onClick={[Function]}
  open={true}
  title={
    <h3>
      Azure Project
    </h3>
  }
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="display-flex-wrap"
    >
      <div
        className="display-flex-start spacer-right spacer-bottom create-project-azdo-repo"
        key="Azure repo 1"
      >
        <Radio
          checked={false}
          className="overflow-hidden"
          disabled={false}
          onCheck={[Function]}
          value="Azure repo 1"
        >
          <strong
            className="text-ellipsis"
            title="Azure repo 1"
          >
            Azure repo 1
          </strong>
        </Radio>
      </div>
      <div
        className="display-flex-start spacer-right spacer-bottom create-project-azdo-repo"
        key="Azure repo 1"
      >
        <CheckIcon
          className="spacer-right"
          fill="#00aa00"
          size={14}
        />
        <div
          className="overflow-hidden"
        >
          <div
            className="little-spacer-bottom text-ellipsis"
          >
            <strong
              title="SQ Name"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": undefined,
                      "id": "sq-key",
                    },
                  }
                }
              >
                SQ Name
              </Link>
            </strong>
          </div>
          <em>
            onboarding.create_project.repository_imported
          </em>
        </div>
      </div>
    </div>
    <ListFooter
      count={2}
      loadMore={[Function]}
      total={2}
    />
  </DeferredSpinner>
</BoxedGroupAccordion>
`;
